--- a/src/pages/productEdit/index.wxml
+++ b/src/pages/productEdit/index.wxml
@@ -7,8 +7,8 @@
 								<i-grid i-class="basic-info-images-guid">
 										<i-grid-item i-class="grid-item" wx:for="{{wxs.arraySlice(productInfo.resources,0,3)}}">
 												<image class="item-images" mode="scaleToFill" src="{{item.resource.url}}" />
-												<van-button size="mini" square type="danger" custom-class="close" data-id="{{item.resourceId}}" bindtap="deleteImage">
-														删除
+												<van-button size="mini" square type="danger" custom-class="close" data-id="{{item.resourceId}}" data-index="{{index}}" bindtap="deleteImage">
+														删除{{item.resourceId}}
 												</van-button>
 										</i-grid-item>
 										<i-grid-item i-class="grid-item" wx:if="{{productInfo.resources.length<3}}">
@@ -25,8 +25,8 @@
 								<i-grid i-class="basic-info-images-guid" wx:if="{{productInfo.resources.length>2}}">
 										<i-grid-item i-class="grid-item" wx:for="{{wxs.arraySlice(productInfo.resources,3,0)}}">
 												<image class="item-images" mode="scaleToFill" src="{{item.resource.url}}" />
-												<van-button size="mini" square type="danger" custom-class="close" data-id="{{item.resourceId}}" bindtap="deleteImage">
-														删除
+												<van-button size="mini" square type="danger" custom-class="close" data-id="{{item.resourceId}}" data-index="{{index+3}}" bindtap="deleteImage">
+														删除{{item.resourceId}}
 												</van-button>
 										</i-grid-item>
 										<i-grid-item i-class="grid-item" wx:if="{{productInfo.resources.length<6}}">
