--- a/src/pages/productManage/index.scss
+++ b/src/pages/productManage/index.scss
@@ -1,6 +1,20 @@
 .product-list {
+  .product-list-item {
+    margin: 20rpx;
+    border-radius: 5px;
+  }
+  .product-list-card {
+    background-color: #fff;
+  }
   .create-time {
     color: #969799;
     font-size: 12px;
+  }
+}
+
+.order-list-item-footer {
+  .but-view {
+    display: flex;
+    flex-direction: row-reverse;
   }
 }
