--- a/src/pages/productEdit/index.wxss
+++ b/src/pages/productEdit/index.wxss
@@ -57,8 +57,8 @@
 
 .basic-info .t-richtext {
   min-height: 500rpx;
-  margin-left: 10rpx;
-  margin-right: 10rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
   background-color: #fff;
 }
 
