--- a/src/pages/productManage/index.wxml
+++ b/src/pages/productManage/index.wxml
@@ -1,17 +1,49 @@
 <view class="main">
-    <!-- <van-tabs>
-        <van-tab title="全部商品">全部商品</van-tab>
-    </van-tabs> -->
+    <view class="">
+        <van-tabs active="{{ active }}" bind:change="onChangeTabs">
+            <van-tab title="全部" name="{{0}}"></van-tab>
+            <van-tab title="已上架" name="{{1}}"></van-tab>
+            <van-tab title="已下架" name="{{2}}"></van-tab>
+            <van-tab title="最近添加" name="{{3}}"></van-tab>
+        </van-tabs>
+    </view>
     <view class="product-list">
-        <van-card wx:for="{{list}}" wx:for-item="product" wx:key="{{product.guid}}" thumb-mode="aspectFill" num="" tag="{{status===0?'下架':'上架'}}" origin-price="{{product.originalPrice}}" centered="{{false}}" currency="¥" price="{{product.currentPrice}}" desc="{{}}" title="{{product.name}}" thumb="{{product.images[0].url}}" data-guid="{{product.guid}}" data-id="{{product.id}}" bindtap="onClickProduct">
-            <view slot="bottom">
-                <view class="create-time">添加 {{product.createdTime}}</view>
-            </view>
-            <view slot="footer">
-                <van-button size="mini">上架</van-button>
-                <van-button size="mini">下架</van-button>
-                <!-- <van-button size="mini" round type="danger">xxx</van-button> -->
-            </view>
-        </van-card>
+        <view class="product-list-item" wx:for="{{list}}" wx:for-item="product">
+            <van-panel use-footer-slot footer-class="o-footer">
+                <view slot="header"></view>
+                <view class="order-list-item-card">
+                    <van-card custom-class="product-list-card" wx:key="{{product.guid}}" thumb-mode="aspectFill" num="" tag="{{product.statusText}}" origin-price="{{product.originalPrice}}" centered="{{false}}" currency="¥" price="{{product.currentPrice}}" desc="{{}}" title="{{product.name}}" thumb="{{product.images[0].url}}" data-guid="{{product.guid}}" data-id="{{product.id}}" bindtap="onClickProduct">
+                        <view slot="bottom">
+                            <view class="create-time">添加时间 {{product.createdTime}}</view>
+                        </view>
+                    </van-card>
+                </view>
+                <view slot="footer" class="order-list-item-footer">
+                    <view class="but-view">
+                        <van-button custom-class="cus-but" size="small" plain icon="upgrade" wx:if="{{product.status!=1}}" data-id="{{product.id}}" data-upstatus="1" bind:click="updateProductStatus">
+                            上架
+                        </van-button>
+                    </view>
+                    <view class="but-view">
+                        <van-button custom-class="cus-but" size="small" plain icon="down" wx:if="{{product.status==1}}" data-id="{{product.id}}" data-upstatus="-1" bind:click="updateProductStatus">
+                            下架
+                        </van-button>
+                    </view>
+                </view>
+            </van-panel>
+            <!-- <van-card wx:for="{{list}}" custom-class="product-list-card" wx:for-item="product" wx:key="{{product.guid}}" thumb-mode="aspectFill" num="" tag="{{product.statusText}}" origin-price="{{product.originalPrice}}" centered="{{false}}" currency="¥" price="{{product.currentPrice}}" desc="{{}}" title="{{product.name}}" thumb="{{product.images[0].url}}" data-guid="{{product.guid}}" data-id="{{product.id}}" bindtap="onClickProduct">
+                <view slot="bottom"><van-icon name="upgrade" /><van-icon name="down" />color="#ed1c24"
+                    <view class="create-time">添加时间 {{product.createdTime}}</view>
+                </view>
+                <view slot="footer">
+                    <van-button size="mini" wx:if="{{product.status!=1}}" data-id="{{product.id}}" data-upstatus="1" bindtap="updateProductStatus">
+                        上架
+                    </van-button>
+                    <van-button size="mini" wx:if="{{product.status==1}}" data-id="{{product.id}}" data-upstatus="-1" bindtap="updateProductStatus">
+                        下架
+                    </van-button> 
+                </view>
+            </van-card> -->
+        </view>
     </view>
 </view>
