--- a/src/pages/profile/index.wxss
+++ b/src/pages/profile/index.wxss
@@ -1,4 +1,5 @@
 /* @import "../../colorui/main.wxss";  */
+
 /* @import "../../colorui/main.wxss"; 
 .UCenter-bg {
   /* background-image: url(https://image.weilanwl.com/color2.0/index.jpg); 
@@ -39,6 +40,7 @@ map, .mapBox {
 
 Page .main {
   position: relative;
+  margin-top: 0;
 }
 
 Page .shader {
@@ -116,6 +118,7 @@ Page .row-content .icon {
   /* margin-left: 50rpx; */
   display: inline-block;
 }
+
 Page .row-content .title {
   /* margin-left: 50rpx; */
   text-align: left;
@@ -125,6 +128,7 @@ Page .row-content .title {
   line-height: 24px;
   display: inline-block;
 }
+
 /* 
 Page .row-content .title .but {
   background-color: #fff;
@@ -152,6 +156,7 @@ Page .row-but {
   border-radius: 0;
   background-color: #eee;
 }
+
 .row-but:after {
   border: 0;
   border-bottom: 1rpx solid rgba(0, 0, 0, 0.2);
