--- a/src/pages/categoryManage/index.wxss
+++ b/src/pages/categoryManage/index.wxss
@@ -8,7 +8,7 @@
   position: relative;
   height: 80rpx;
   line-height: 80rpx;
-  background-color: #fff
+  /* background-color: #fff */
 }
 
 .popup-tag-main .tag-top-bottom .popup-tag-close {
