--- a/src/pages/home/index.wxml
+++ b/src/pages/home/index.wxml
@@ -2,8 +2,8 @@
 <view class="main">
   <view class="grid-content">
     <van-grid column-num="2">
-      <van-grid-item icon="todo-list-o" text="扫一扫" info="{{homeData.orderWaitCount}}" is-link url="/pages/orderManage/index?active=1" />
-      <van-grid-item icon="orders-o" text="订单查询" dot="{{false}}" is-link url="{{'/pages/orderManage/index'}}" />
+      <van-grid-item icon="scan" text="扫一扫" is-link />
+      <van-grid-item icon="search" text="订单查询" dot="{{false}}" is-link />
     </van-grid>
   </view>
   <view class="grid-content">
