--- a/src/pages/authorize/index.wxss
+++ b/src/pages/authorize/index.wxss
@@ -8,3 +8,9 @@ Page .info {
   padding: 20rpx;
   font-size: 14px;
 }
+
+Page .app-btn {
+  margin-top: 80rpx;
+  color: #fff;
+  background: #ee0a24;
+}
